kubernetes/components/flux-instance/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
  namespace: flux-system
spec:
  hostnames: ["flux.mafyuh.dev"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: http
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
